--- a/docker_project.yml
+++ b/docker_project.yml
@@ -104,6 +104,10 @@
         state: started
         ports:
           - "5432:5432"
+        env:
+          POSTGRES_PASSWORD: "Pp123456789"
+          POSTGRES_USER: "gitea"
+          POSTGRES_DB: "gitea"
         volumes:
           - /db-data:/var/lib/postgresql/data
 
