--- a/docker_project.yml
+++ b/docker_project.yml
@@ -144,6 +144,6 @@
           DB_HOST: "{{ db_host }}"        # The hostname or IP of the PostgreSQL server
           DB_NAME: "gitea"        # The name of the database to use
           DB_USER: "gitea"        # The username for the database
-          DB_PASSWD: "GiteaUserPassword457"  # The password for the database
+          DB_PASSWD: "Pp123456789"  # The password for the database
         volumes:
           - /gitea-data:/data # Adjust the volume path as necessary
